# titanic-ml-service

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
notebooks/: 1.0-tc-data-collection.ipynb  1.0-tc-initial-data-exploration.ipynb  2.0-tc-data-cleaning.ipynb  3.0-tc-data-featuring.ipynb  4.0-tc-eda.ipynb  5.0-tc-feature_selection.ipynb  6.0-tc-model-selection.ipynb
scripts/: build_dataset.py  evaluate.py  predict.py  train.py
src/titanic/: cleaning.py  data.py  eda.py  evaluate.py  features.py  hyperparameters.py  imputations_age.py  models.py  predict.py  preprocessing.py  selection.py  survival_features.py  tuning.py  validation.py
